[workspace]
members = [
    "zemeroth",
    "zgui", 
    "zscene",
    "risc0/host",
    "risc0/methods",
    "battle",
  ]

resolver = "2"


[workspace.dependencies]
battle = { path = "battle" }
host = { path = "risc0/host" }
methods = { path = "risc0/methods" }
bonsai = { path = "risc0/bonsai" }

hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
rand = { version = "0.8", features = ["small_rng"] }
hashbrown = "0.14"

# game
mq = { package = "macroquad", version = "=0.4.2" }

# risc0
risc0-zkvm = { version = "1.0.1", default-features = false }
risc0-build = { version = "1.0.1" }
bonsai-sdk = "0.8"

# wasm
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }