[package]
name = "zemeroth"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
assets = "assets/"
res = "android_res"
icon = "@mipmap/ic_launcher"
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
version_code = 6

# android_version = 33
target_sdk_version = 33

[package.metadata.android.activity_attributes]
"android:exported" = "true"
"android:screenOrientation" = "userLandscape"

[dependencies]
ron = "0.8.1"
log = "0.4"
env_logger = "0.10"
derive_more = { version = "0.99", features = ["from"] } # TODO: https://github.com/ozkriff/zemeroth/issues/251
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
num = { version = "0.4", default-features = false }
ui = { path = "../zgui", package = "zgui" }
zscene = { path = "../zscene" }
rand = "0.8"
heck = "0.4.1"
once_cell = "1.19"
hex = "0.4"
mq.workspace =true
battle.workspace = true

# bonsai.workspace = true
methods.workspace = true
risc0-zkvm = { workspace = true, features = ["prove"] }

[dev-dependencies]
pretty_assertions = "1.3"


[features]
default = ["event","debug"]
event = ["battle/event"]
debug = ["battle/debug"]
